deployment/nginx-service-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: myservice
  labels:
    app: nginx
    
spec:
  selector:
    app: nginx
  type: LoadBalancer
  #externalIPs:
  #- 192.168.0.105
  ports:
     - nodePort: 30000
       port: 80
       targetPort: 80
